Fix issue with sorting icon causing table headers to shift.

--- a/Folly.Web/Assets/css/table.css
+++ b/Folly.Web/Assets/css/table.css
@@ -37,6 +37,8 @@ nilla-table {
 
         .sort-icon {
             & svg {
+                margin-top: -0.5rem;
+
                 & path {
                     fill: currentcolor;
                 }
